--- a/music_player_ui/package.json
+++ b/music_player_ui/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@material-ui/core": "^4.12.4",
+    "@pankod/refine-antd": "^4.7.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-and-background-image-fade": "^1.0.8",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
