splited the css file

--- a/music_player_ui/package.json
+++ b/music_player_ui/package.json
@@ -7,6 +7,7 @@
     "@material-table/core": "^6.1.13",
     "@material-ui/core": "^4.12.4",
     "@pankod/refine-antd": "^4.7.3",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-and-background-image-fade": "^1.0.8",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-virtuoso": "^4.1.0",
