--- a/music_player_ui/package.json
+++ b/music_player_ui/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^5.0.1",
     "@material-table/core": "^6.1.13",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@pankod/refine-antd": "^4.7.3",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
